ci: slack-notify

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,3 +72,15 @@ jobs:
           for task in ${{ matrix.make.task }} ; do
             cargo make ${task}
           done
+
+  slack-notify:
+    if: always()
+    needs:
+      - job-matrix
+    name: workflow notification to slack
+    runs-on: ubuntu-latest
+    steps:
+      - uses: Gamesight/slack-workflow-status@master
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
